[package]
name = "git-streak"
version = "0.1.0"
authors = ["sathis <sathis62@gmail.com>"]
edition = "2018"

[dependencies]
git2 = "0.8"
clap = {version = "2.33", features = ["yaml"]}
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.91", features = ["derive"] }
rte = "0.2.1"
serde_json = "1.0"
bincode = "1.1.3"