[package]
name = "gstreak"
version = "0.2.0"
authors = ["sathis <sathis62@gmail.com>"]
edition = "2018"

[dependencies]
git2 = "0.13.17"
anyhow = "1.0"
clap = {version = "2.33", features = ["yaml"]}
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.91", features = ["derive"] }
chrono-english = "0.1.4"
serde_json = "1.0"
bincode = "1.1.3"
git2_credentials = "0.7.1"